--- a/.github/workflows/bump-version-PR.yml
+++ b/.github/workflows/bump-version-PR.yml
@@ -1,3 +1,11 @@
+# Workflow to create a new release PR, which does the following:
+#
+# - Pushes a new `release/<light-client>-v<version>` branch based on latest `dev`
+# - Creates a new branch from the release, then bumps the version with the `version` input
+# - Opens a PR from the `version-bump` branch to the release branch
+# - When merged, triggers a release from `tag-release.yml`
+#
+# The `version-bump` branch can then be safely deleted, while the release branch will be protected
 name: Bump Version
 on:
   workflow_dispatch:
@@ -31,11 +39,13 @@ jobs:
     steps:
       - name: Git config
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "argument-ci[bot]"
+          git config --global user.email "argument-ci[bot]@users.noreply.github.com"
 
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@master
@@ -45,29 +55,50 @@ jobs:
       - name: Install `tq-rs`
         run: cargo install tq-rs
 
-      # The `release/<aptos|ethereum|kadena>-v1.0` branch is always truncated, so that patch version merges still are valid Semver
-      # However, when we make the initial `release/<aptos|ethereum|kadena>-v1.0` version bump, we include the full `1.0.0` in `Cargo.toml`
-      # and the release for clarity
-      - name: Set branches
+      - uses: tibdex/github-app-token@v2
+        id: generate-token
+        with:
+          app_id: ${{ secrets.TOKEN_APP_ID }}
+          private_key: ${{ secrets.TOKEN_APP_PRIVATE_KEY }}
+
+      # The `release/<aptos|ethereum|kadena>-v1.0` branch is always truncated, as we don't want to change
+      # the release branch name for patch versions
+      #
+      # However, when we make e.g. a `release/<aptos|ethereum|kadena>-v1.0` version bump, we include the full
+      # `1.0.0` in `Cargo.toml` and the release for clarity
+      - name: Create release branch
         run: |
+          BASE_VERSION="${{ inputs.version }}.0"
           BASE_VERSION_SHORT=$(echo "${{ inputs.version }}" | cut -d'.' -f1-2)
-          BASE_VERSION="${BASE_VERSION_SHORT}.0"
-          if [[ "${{ inputs.type }}" == "hotfix" ]]; then
-            VERSION=${{ inputs.version }}
-            BASE_BRANCH="release/${{ inputs.light-client }}-v$BASE_VERSION_SHORT"
-            PR_BRANCH="${{ inputs.type }}/${{ inputs.light-client }}-v${{ inputs.version }}"
-            git checkout -b $PR_BRANCH
+          BASE_BRANCH="release/${{ inputs.light-client }}-v$BASE_VERSION_SHORT"
+
+          if [[ "${{ inputs.type }}" == "release" ]]; then
+            git checkout -b $BASE_BRANCH
+            git push origin $BASE_BRANCH
           else
-            VERSION=$BASE_VERSION
-            BASE_BRANCH="dev"
-            PR_BRANCH="release/${{ inputs.light-client }}-v$BASE_VERSION_SHORT"
-            git checkout -b $PR_BRANCH
+            git checkout $BASE_BRANCH
           fi
 
+          echo "BASE_VERSION=$BASE_VERSION" | tee -a $GITHUB_ENV
           echo "BASE_BRANCH=$BASE_BRANCH" | tee -a $GITHUB_ENV
-          echo "PR_BRANCH=$PR_BRANCH" | tee -a $GITHUB_ENV
-          echo "PR_DESCRIPTION=chore(${{ inputs.light-client }}): Release $VERSION" | tee -a $GITHUB_ENV
+        env:
+          GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
+
+      - name: Create PR branch
+        run: |
+          if [[ "${{ inputs.type }}" == "hotfix" ]]; then
+            VERSION=${{ inputs.version }
+            PR_BRANCH="${{ inputs.type }}/${{ inputs.light-client }}-v${{ inputs.version }}"
+          else
+            VERSION=$BASE_VERSION
+            PR_BRANCH="version-bump"
+          git checkout -b $PR_BRANCH
+
           echo "VERSION=$VERSION" | tee -a $GITHUB_ENV
+          echo "PR_BRANCH=$PR_BRANCH" | tee -a $GITHUB_ENV
+          echo "PR_TITLE=chore(${{ inputs.light-client }}): Release $VERSION" | tee -a $GITHUB_ENV
+        env:
+          GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
 
       # Regex from https://semver.org/#is-there-a-suggested-regular-expression-regex-to-check-a-semver-string
       - name: Validate version
@@ -91,7 +122,7 @@ jobs:
             members=$(tq workspace.members -f Cargo.toml | jq -r '. += ["programs/inclusion", "programs/committee-change"] | .[]')
           elif [[ "${{ inputs.light-client }}" == "aptos" ]]; then
             members=$(tq workspace.members -f Cargo.toml | jq -r '. += ["programs/inclusion", "programs/epoch-change"] | .[]')
-          elif [[ "${{ inputs.light-client }}" == "aptos" ]]; then
+          elif [[ "${{ inputs.light-client }}" == "kadena" ]]; then
             members=$(tq workspace.members -f Cargo.toml | jq -r '. += [""] | .[]')
           else
             echo "Unknown light-client: ${{ inputs.light-client }}. Aborting..."
@@ -126,21 +157,24 @@ jobs:
       - name: Commit changes
         run: |
           git add .
-          git commit -m "${{ env.PR_DESCRIPTION }}"
+          git commit -m "${{ env.PR_TITLE }}"
           git push origin ${{ env.PR_BRANCH }}
+        env:
+          GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
 
       # Note: Can't use `peter-evans/create-pull-request` because for hotfixes we need to make the PR with an existing branch
       # The former always creates a new one for single-commit PRs, thus overwriting the actual hotfix
-      - name: Create PR
+      - name: Create pull request
         run: |
           cat << 'EOF' > body.md
           This is an automated release PR for version `${{ env.VERSION }}` of the ${{ inputs.light-client }} light client.
+
+          Please update the Sphinx dependency versions to the appropriate release tag manually. (TODO: Automate)
 
           On merge, this will trigger the [release publish workflow](${{ github.server_url }}/${{ github.repository }}/actions/workflows/tag-release.yml), which will upload a new GitHub release with tag `${{ inputs.light-client }}-v${{ env.VERSION }}`.
 
           [Workflow run](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
           EOF
-
-          gh pr create --title "${{ env.PR_DESCRIPTION }}" --body-file ./body.md --head ${{ env.PR_BRANCH }} --base ${{ env.BASE_BRANCH }}
+          gh pr create --title "${{ env.PR_TITLE }}" --body-file ./body.md --head ${{ env.PR_BRANCH }} --base ${{ env.BASE_BRANCH }}
         env:
-          GH_TOKEN: ${{ secrets.REPO_TOKEN }}
+          GH_TOKEN: ${{ steps.generate-token.outputs.token }}
