--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -222,7 +222,7 @@ jobs:
 
           for test_name in ${{ env.TESTS }}; do
             cargo nextest run --verbose --release --profile ci ${{ env.FEATURES }} --package ${{ matrix.package }}-lc --no-capture -E "test($test_name)" 2>&1 | tee out.txt
-            num_cycles=$(cat out.txt | grep -o 'finished execution clk = [0-9]\+' | awk -F'= ' '{ print $2 }')
+            num_cycles=$(cat out.txt | grep -o 'summary: cycles=[0-9]\+' | awk -F'=' '{ print $2 }')
             CYCLE_COUNTS=$(echo $CYCLE_COUNTS | jq -c ". += [{\"${test_name}\": \"$num_cycles\"}]")
           done
 
@@ -244,10 +244,9 @@ jobs:
           REGRESSION="false"
           set -o pipefail
 
-          # TODO: Remove hardcoded test names
           for test_name in ${{ env.TESTS }}; do
             cargo nextest run --verbose --release --profile ci ${{ env.FEATURES }} --package ${{ matrix.package }}-lc --no-capture -E "test($test_name)" 2>&1 | tee out.txt
-            num_cycles_base=$(cat out.txt | grep -o 'finished execution clk = [0-9]\+' | awk -F'= ' '{ print $2 }')
+            num_cycles_base=$(cat out.txt | grep -o 'summary: cycles=[0-9]\+' | awk -F'=' '{ print $2 }')
             num_cycles_pr=$(echo "$CYCLE_COUNTS" | jq ".[$counter] | to_entries | .[0].value")
             echo "$test_name summary"
             echo "Base = $num_cycles_base cycles, PR = ${num_cycles_pr:1:-1} cycles"
