--- a/ethereum/.cargo/config.toml
+++ b/ethereum/.cargo/config.toml
@@ -51,6 +51,7 @@ xclippy = [
     "-Wunreachable_pub",
     "-Wtrivial_numeric_casts",
     "-Wunused_qualifications",
+    "-Aclippy::too_long_first_doc_paragraph"
 ]
 
 [profile.ci]
