--- a/kadena/Cargo.toml
+++ b/kadena/Cargo.toml
@@ -10,14 +10,21 @@ repository = "https://github.com/argumentcomputer/zk-light-clients"
 
 [workspace.dependencies]
 anyhow = "1.0.86"
+axum = "0.7.5"
+backoff = "0.4.0"
 base64 = "0.22.1"
 chrono = "0.4.38"
+clap = { version = "4.5.16", features = ["derive"] }
+env_logger = "0.11.5"
 getset = "0.1.2"
 glob = "0.3.1"
+log = "0.4.22"
+reqwest = "0.12.7"
 serde = "1.0.209"
 serde_json = "1.0.127"
 sha2 = "0.9"
 thiserror = "1.0.63"
+tokio = "1.39.2"
 uint = "0.9.5"
 
 # Sphinx dependencies
