--- a/kadena/core/Cargo.toml
+++ b/kadena/core/Cargo.toml
@@ -6,12 +6,13 @@ repository = { workspace = true }
 license = { workspace = true }
 
 [dependencies]
-sha2 = { workspace = true }
-getset = { workspace = true }
+anyhow = { workspace = true }
 base64 = { workspace = true }
-uint = { workspace = true }
 chrono = { workspace = true }
+getset = { workspace = true }
 thiserror = { workspace = true }
+sha2 = { workspace = true }
+uint = { workspace = true }
 
 [features]
 default = []
