--- a/kadena/light-client/Cargo.toml
+++ b/kadena/light-client/Cargo.toml
@@ -13,6 +13,7 @@ base64 = { workspace = true }
 clap = { workspace = true }
 env_logger = { workspace = true }
 getset = { workspace = true }
+hex = "0.4.3"
 log = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
 serde = { workspace = true, features = ["derive"] }
