--- a/kadena/light-client/Cargo.toml
+++ b/kadena/light-client/Cargo.toml
@@ -7,11 +7,20 @@ license = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
+axum = { workspace = true }
+backoff = { workspace = true, features = ["tokio"] }
 base64 = { workspace = true }
+clap = { workspace = true }
+env_logger = { workspace = true }
+getset = { workspace = true }
+hex = "0.4.3"
+log = { workspace = true }
+reqwest = { workspace = true, features = ["json"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
 thiserror = { workspace = true }
+tokio = { workspace = true }
 
 # LC crates
 kadena-lc-core = { path = "../core" }
@@ -22,3 +31,11 @@ sphinx-sdk = { workspace = true }
 
 [dev-dependencies]
 kadena-lc-core = { path = "../core", features = ["kadena"] }
+
+[[bin]]
+name = "client"
+path = "src/bin/client.rs"
+
+[[bin]]
+name = "proof_server"
+path = "src/bin/proof_server.rs"
