--- a/.github/workflows/fixtures.yml
+++ b/.github/workflows/fixtures.yml
@@ -4,7 +4,7 @@
 name: Update fixtures
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch: { }
   # Once per day at 00:00 UTC
   schedule:
     - cron: "0 0 * * *"
@@ -19,13 +19,15 @@ jobs:
     timeout-minutes: 90
     strategy:
       matrix:
-        fixture: [inclusion, epoch_change]
-        language: [solidity, move]
+        fixture: [ inclusion, epoch_change ]
+        language: [ solidity, move, pact ]
         include:
           - fixture-path: aptos/solidity/contracts/src/plonk_fixtures
             language: solidity
           - fixture-path: ethereum/move/sources/fixtures
             language: move
+          - fixture-path: ethereum/pact/fixtures
+            language: pact
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
@@ -55,7 +57,7 @@ jobs:
             ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
         with:
           update_existing: true
-          filename: .github/FIXTURES.md 
+          filename: .github/FIXTURES.md
 
   create-pull-request:
     needs: generate-fixtures
@@ -63,6 +65,7 @@ jobs:
     env:
       SOLIDITY_FIXTURE_PATH: aptos/solidity/contracts/src/plonk_fixtures
       MOVE_FIXTURE_PATH: ethereum/move/sources/fixtures
+      PACT_FIXTURE_PATH: ethereum/pact/fixtures
     steps:
       - uses: actions/checkout@v4
       - name: Download Solidity fixtures
@@ -77,6 +80,35 @@ jobs:
           path: ${{ github.workspace }}/${{ env.MOVE_FIXTURE_PATH }}
           pattern: "move_*"
           merge-multiple: true
+      - name: Download Pact fixtures
+        uses: actions/download-artifact@v4
+        with:
+          path: ${{ github.workspace }}/${{ env.PACT_FIXTURE_PATH }}
+          pattern: "pact_*"
+          merge-multiple: true
+      - name: Test fixtures invariant
+        run: |
+          for fixture in epoch_change_fixture.json inclusion_fixture.json; do
+            echo "Testing $fixture"
+            jq -s '
+              (.[0].proof | length) as $proof_len |
+              (.[1].args[2].value | length) as $arg_value_len |
+              { is_proof_longer: ($proof_len > $arg_value_len) }
+            ' ${{ github.workspace }}/${{ env.PACT_FIXTURE_PATH }}/$fixture ${{ github.workspace }}/${{ env.MOVE_FIXTURE_PATH }}/$fixture | 
+              jq -e '.is_proof_longer' > /dev/null || {
+                echo "Length assertion failed for $fixture."
+                exit 1
+              }
+          done
+      - uses: JasonEtco/create-an-issue@v2
+        if: ${{ failure() }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WORKFLOW_URL:
+            ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+        with:
+          update_existing: true
+          filename: .github/FIXTURES.md
       - uses: tibdex/github-app-token@v2
         id: generate-token
         with:
