--- a/docker/helm/proof-server/Chart.yaml
+++ b/docker/helm/proof-server/Chart.yaml
@@ -19,3 +19,4 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "0.1.0"
+icon: https://avatars.githubusercontent.com/u/104174991
