--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -84,6 +84,6 @@ jobs:
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ inputs.light-client }}
+          subject-name: ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ inputs.light-client }}-proof-server
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
