--- a/docker/proof-server-chart/values.yaml
+++ b/docker/proof-server-chart/values.yaml
@@ -4,14 +4,16 @@ deployment:
       containerPort: "8080"
       rustLog: debug
     image:
-      repository: argumentcomputer/aptos-light-client
+      repository: ghcr.io/argumentcomputer/ethereum-proof-server
       tag: latest
     imagePullPolicy: IfNotPresent
   replicas: 1
 kubernetesClusterDomain: cluster.local
+nodeSelector:
+  instance-type: r7iz.metal-32xl
 service:
   ports:
-  - port: 80
-    protocol: TCP
-    targetPort: 8080
+    - port: 80
+      protocol: TCP
+      targetPort: 8080
   type: ClusterIP
